--- a/Anul I/TW/Proiecte/(1) - TW - HTML & CSS/about.html
+++ b/Anul I/TW/Proiecte/(1) - TW - HTML & CSS/about.html
@@ -3,7 +3,7 @@
     
 <head>
     <title>site/about</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Righteous&display=swap" rel="stylesheet">
 </head>
@@ -30,7 +30,7 @@
                         <p class="underline">William Pellen</p>
                         <div class="people">
                             <p>William is a Co-director of Team Cherry. He's been designing and building games for years, creating crazy worlds for people to poke around in and explore. He's loved games ever since his Dad found the wing boots for him in Zelda 2, and wants to recreate that experience of adventure and excitement for other people.</p>
-                            <img src="William_Pellen.png">
+                            <img src="./images/William_Pellen.png">
                         </div>
                         
                     </div>
@@ -39,7 +39,7 @@
                         <p class="underline">Ari Gibson</p>
                         <div class="people">
                             <p>Ari is a Co-director of Team Cherry. He previously ran the animation studio Mechanical Apple and has worked on countless projects across film, games and music videos. Ari's been modding games from before computers were colour and has loved them since his first-ever game rental: Faxanadu for NES.</p>
-                            <img src="Ari_Gibson.png">
+                            <img src="./images/Ari_Gibson.png">
                         </div>
                     </div>
 
@@ -47,7 +47,7 @@
                         <p class="underline">Jack Vine</p>
                         <div class="people">
                             <p>Jack is Team Cherry’s supremely talented coder. Jack’s been building out the systems, tightening and optimising and adding a suite of all new exciting features. Jack has worked with Team Cherry for some time now, being instrumental in Hollow Knight’s console releases and the development of its huge final free Content Pack, Godmaster.</p>
-                            <img src="Jack_Vine.png">
+                            <img src="./images/Jack_Vine.png">
                         </div>
                     </div>
 
@@ -55,7 +55,7 @@
                         <p class="underline">David Kazi</p>
                         <div class="people">
                             <p>David is a former member of Team Cherry who was responsible for Hollow Knight's technical direction. He divided his time between making the game run and fixing things that Ari and William broke. He left Team Cherry in 2017 after he was offered a corporate job.</p>
-                            <img src="David_Kazi.png">
+                            <img src="./images/David_Kazi.png">
                         </div>
                     </div>
 
@@ -63,7 +63,7 @@
                         <p class="underline">Christopher Larkin</p>
                         <div class="people">
                             <p>Christopher Larkin is responsible for composing the music and sound of Hollow Knight and its sequel. He has worked extensively across television, film, and games. He's also locally based in Adelaide, so he's able to work really closely with the team and the game.</p>
-                            <img src="Larkin.png">
+                            <img src="./images/Larkin.png">
                         </div>
                     </div>
 
@@ -71,7 +71,7 @@
                         <p class="underline">Matthew Griffin</p>
                         <div class="people">
                             <p>Matt handles PR and marketing for Hollow Knight. He's previously worked in this role for Stardew Valley, Interstellaria and Wanderlust Adventures. Matt is also a game creator himself, working as the main coder for Wanderlust and the online-multiplayer coder for procedural platformer Risk of Rain.</p>
-                            <img src="Leth.png">
+                            <img src="./images/Leth.png">
                         </div>
                     </div>
                 </div>
