--- a/Anul I/TW/Proiecte/(1) - TW - HTML & CSS/resources.html
+++ b/Anul I/TW/Proiecte/(1) - TW - HTML & CSS/resources.html
@@ -3,7 +3,7 @@
     
 <head>
     <title>site/resources</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./stylesheets/style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Righteous&display=swap" rel="stylesheet">
 </head>
@@ -30,7 +30,7 @@
                         <p class="underline">Unity Game Engine</p>
                         <div class="people">
                             <p>Unity is so much more than the world’s best real-time development platform – it’s also a robust ecosystem designed to enable your success. Join our dynamic community of creators so you can tap into what you need to achieve your vision.</p>
-                            <a href="https://unity.com/"><img src="unity.jpg"></a>
+                            <a href="https://unity.com/"><img src="./images/unity.jpg"></a>
                         </div>
                     </div>
 
@@ -38,7 +38,7 @@
                         <p class="underline">Visual Studio Code</p>
                         <div class="people">
                             <p>Visual Studio Code is a code editor redefined and optimized for building and debugging modern web and cloud applications.</p>
-                            <a href="https://code.visualstudio.com/"><img src="vscode.png"></a>
+                            <a href="https://code.visualstudio.com/"><img src="./images/vscode.png"></a>
                         </div>
                     </div>
 
@@ -46,7 +46,7 @@
                         <p class="underline">RPG Maker</p>
                         <div class="people">
                             <p>Games are hard to make, right? Not with RPG Maker! It’s as simple as starting a New Project. We provide the tools and assets so you can start making your dream game in seconds!</p>
-                            <a href="https://www.rpgmakerweb.com/"><img src="rpgmaker.jpg"></a>
+                            <a href="https://www.rpgmakerweb.com/"><img src="./images/rpgmaker.jpg"></a>
                         </div>
                     </div>
 
@@ -54,7 +54,7 @@
                         <p class="underline">Photoshop</p>
                         <div class="people">
                             <p>Adobe's family of Photoshop apps gives everyone the tools to turn inspiration into incredible images and photos on any device.</p>
-                            <a href="https://www.adobe.com/products/photoshop.html"><img src="photoshop.png"></a>
+                            <a href="https://www.adobe.com/products/photoshop.html"><img src="./images/photoshop.png"></a>
                         </div>
                     </div>
 
@@ -62,7 +62,7 @@
                         <p class="underline">Blender</p>
                         <div class="people">
                             <p>Blender is the free and open source 3D creation suite. It supports the entirety of the 3D pipeline—modeling, rigging, animation, simulation, rendering, compositing and motion tracking, video editing and 2D animation pipeline.</p>
-                            <a href="https://www.blender.org/"><img src="blender.png"></a>
+                            <a href="https://www.blender.org/"><img src="./images/blender.png"></a>
                         </div>
                     </div>
 
@@ -70,7 +70,7 @@
                         <p class="underline">MagicaVoxel</p>
                         <div class="people">
                             <p>A free lightweight 8-bit voxel editor and interactive path tracing renderer, made with love by @ephtracy. Available for PC and MAC.</p>
-                            <a href="https://ephtracy.github.io/"><img src="magicavoxel.png"></a>
+                            <a href="https://ephtracy.github.io/"><img src="./images/magicavoxel.png"></a>
                         </div>
                     </div>
                 </div>
