--- a/Anul I/TW/Proiecte/(3) - TW - node.js/HTML/about.html
+++ b/Anul I/TW/Proiecte/(3) - TW - node.js/HTML/about.html
@@ -3,16 +3,16 @@
     
 <head>
     <title>About</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 
 <body>
     <div class="main_container">
         <div class="menu_bar">
-            <div><a href="https://github.com/GabrielGruia/Tema-1-TW"><img src= "/Images/logo.png" class="logo"></a></div>
-            <div class="button games"><a href="/HTML/games.html" class="button games">‎‎‎GAMES‎</a></div>
-            <div class="button about"><a href="/HTML/about.html" class="button about">‏‏‎‎‎ABOUT‏‏‎‏‏‎‎</a></div>
-            <div class="button resources"><a href="/HTML/resources.html" class="button resources">‏‏‎‏‏‎RESOURCES</a></div>
+            <div><a href="https://github.com/GabrielGruia/Tema-1-TW"><img src= "../Images/logo.png" class="logo"></a></div>
+            <div class="button games"><a href="../HTML/games.html" class="button games">‎‎‎GAMES‎</a></div>
+            <div class="button about"><a href="../HTML/about.html" class="button about">‏‏‎‎‎ABOUT‏‏‎‏‏‎‎</a></div>
+            <div class="button resources"><a href="../HTML/resources.html" class="button resources">‏‏‎‏‏‎RESOURCES</a></div>
         </div>
         <div class="content">
             <div class="about_title">ABOUT</div>
@@ -24,13 +24,13 @@
                 <div>
                     <div class="team_title">THE TEAM</div>
 
-                    <div class="team_photo"><img src="/Images/team.png"></div>
+                    <div class="team_photo"><img src="../Images/team.png"></div>
 
                     <div class="dev_list">
                         <p class="underline">Gabriel Gruia</p>
                         <div class="people">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <img src="/Images/eul_liric.png">
+                            <img src="../Images/eul_liric.png">
                         </div>
                         
                     </div>
@@ -39,7 +39,7 @@
                         <p class="underline">Cosmin Anton</p>
                         <div class="people">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <img src="/Images/cosmin.png">
+                            <img src="../Images/cosmin.png">
                         </div>
                     </div>
 
@@ -47,7 +47,7 @@
                         <p class="underline">Alexandra "Aca" Neagu</p>
                         <div class="people">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <img src="/Images/aca.png">
+                            <img src="../Images/aca.png">
                         </div>
                     </div>
 
@@ -55,7 +55,7 @@
                         <p class="underline">Adrian "lene" Cuciureanu</p>
                         <div class="people">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <img src="/Images/adi.png">
+                            <img src="../Images/adi.png">
                         </div>
                     </div>
 
@@ -63,7 +63,7 @@
                         <p class="underline">Stancu Tudor</p>
                         <div class="people">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <img src="/Images/stancu.png">
+                            <img src="../Images/stancu.png">
                         </div>
                     </div>
 
@@ -71,7 +71,7 @@
                         <p class="underline">Irina Florea</p>
                         <div class="people">
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-                            <img src="/Images/irina.png">
+                            <img src="../Images/irina.png">
                         </div>
                     </div>
                 </div>
