--- a/Anul I/TW/Proiecte/(3) - TW - node.js/HTML/games.html
+++ b/Anul I/TW/Proiecte/(3) - TW - node.js/HTML/games.html
@@ -7,16 +7,16 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <title>Games</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="../CSS/style.css">
 </head>
 
 <body>
     <div class="main_container">
         <nav class="menu_bar">
-            <div><a href="https://github.com/GabrielGruia/Tema-1-TW"><img src= "/Images/logo.png" class="logo"></a></div>
-            <div class="button games"><a href="/HTML/games.html" class="button games">‎‎‎GAMES‎</a></div>
-            <div class="button about"><a href="/HTML/about.html" class="button about">‏‏‎‎‎ABOUT‏‏‎‏‏‎‎</a></div>
-            <div class="button resources"><a href="/HTML/resources.html" class="button resources">‏‏‎‏‏‎RESOURCES</a></div>
+            <div><a href="https://github.com/GabrielGruia/Tema-1-TW"><img src= "../Images/logo.png" class="logo"></a></div>
+            <div class="button games"><a href="../HTML/games.html" class="button games">‎‎‎GAMES‎</a></div>
+            <div class="button about"><a href="../HTML/about.html" class="button about">‏‏‎‎‎ABOUT‏‏‎‏‏‎‎</a></div>
+            <div class="button resources"><a href="../HTML/resources.html" class="button resources">‏‏‎‏‏‎RESOURCES</a></div>
         </nav>
         <div class="content">
             <div class="games_title">GAMES</div>
@@ -49,9 +49,9 @@
     </div>
 </body>
 
-<script src="/JS/read.js"></script>
-<script src="/JS/create.js"></script>
-<script src="/JS/update.js"></script>
-<script src="/JS/delete.js"></script>
+<script src="../JS/read.js"></script>
+<script src="../JS/create.js"></script>
+<script src="../JS/update.js"></script>
+<script src="../JS/delete.js"></script>
 
 </html>
